<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secrets</string>
    <string name="hello_world">Hello world, Hi Murph!</string>
    <string name="action_settings">Settings</string>
    <string name="title_group_list">Groups</string>
    <string name="title_group_detail">Secrets</string>
    <string name="button_go">Go to other activity</string>
    <string name="add_group">Create a Group</string>

    <string name="splash_title">Secrets</string>
    <string name="username_hint">Email/Username</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="by_adrenaline">by Adrenaline</string>
    <string name="click_here_to_sign_up"><u>or click here to sign up</u></string>
    <string name="share_secrets_securely">Share your secrets securely</string>
    <string name="login"><b>Login</b></string>
    <string name="adrenaline_logo">Adrenaline logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="create_account"><b>Create Account</b></string>
    <string name="need_to_create_account"><u>Need to create an account?</u></string>
    <string name="title_activity_log_in_sign_up">Log In Sign Up</string>
    <string name="have_account"><u>Already have an account?</u></string>
    <string name="verify_password_hint">Verify password</string>
    <string name="please_wait">Please wait...</string>

    <string name="fragment_group_info_general_info_modified">Modified: %1$s, %2$s</string>
    <string name="fragment_group_info_general_info_modified_by_me">Modified by me: %s</string>
    <string name="fragment_group_info_general_info_opened_by_me">Opened by me: %s</string>
    <string name="fragment_group_info_general_info_title">General info</string>
    <string name="fragment_group_info_item_in_trash">This item is in your trash.</string>
    <string name="fragment_group_info_offline_title">Offline</string>
    <string name="fragment_group_info_sharing_title">Who has access</string>
    <string name="fragment_group_info_close_button_content_description">Close info panel</string>
    <string name="fragment_group_info_content_description">Show group properties</string>

    <string name="add_person">Add people</string>
    <string name="add_persons_description">Add people to share with</string>
    <string name="add_person_accept">Add</string>
    <string name="add_persons_default">Users to share with</string>

    <string name="sharing_list_offline">Sharing list unavailable in offline mode.</string>
    <string name="pin_offline">Offline</string>
    <string name="pin_checkbox_label">Available offline</string>
    <string name="shared_status">Shared</string>
    <string name="shared_with_me">Shared with me</string>
    <string name="sharing_activity_title">Sharing</string>

    <string name="rename_group">Rename</string>
    <string name="secret_toggle_content_description">Show or hide the details</string>
    <string name="secret_edit_content_description">Edit secret</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_group">Create group</string>
    <string name="group_name">Group name</string>
    <string name="change_group_name">Change name</string>
    <string name="add_secret">Add secret</string>
    <string name="note">Note</string>

    <string name="editor_title_hint">Title</string>
    <string name="last_modified">Edited: %s</string>
    <string name="action_discard_secret">Discard</string>
    <string name="editor_note_hint">Note</string>
    <string name="title_activity_secret_editor">Editor</string>
    <string name="action_save_secret">Save</string>
    <string name="editor_website_hint">Website</string>
    <string name="editor_username_hint">Username</string>
    <string name="editor_password_hint">Password</string>
    <string name="owner">Owner</string>
    <string name="can_view">Can view</string>
    <string name="can_edit">Can edit</string>
    <string name="unknown_email">Unknown email</string>
    <string name="add">Add</string>
    <string name="no_access">No access</string>
    <string name="sharing_setting">User sharing settings</string>
    <string name="remove_group">Remove</string>

</resources>
