<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add_secret"
        android:icon="@drawable/ic_action_add_secret"
        android:title="@string/add_secret"
        android:showAsAction="ifRoom|withText">
        <menu>
        <item android:id="@+id/action_add_note_secret"
            android:icon="@drawable/ic_note"
            android:title="@string/note"/>
        <item android:id="@+id/action_add_password_secret"
            android:icon="@drawable/ic_password"
            android:title="@string/password"/>
        </menu>
    </item>
    <item android:id="@+id/action_general_info"
        android:icon="@drawable/ic_action_about"
        android:title="@string/fragment_group_info_general_info_title"
        android:showAsAction="ifRoom"  />
</menu>