<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical"
    android:background="@color/splash_bg"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/splash_title"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="48sp"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/share_secrets_securely"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/username"
            android:background="@drawable/textinputborder"
            android:hint="@string/username_hint"
            android:singleLine="true"
            android:layout_marginBottom="5dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/password"
            android:background="@drawable/textinputborder"
            android:hint="@string/password_hint"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:password="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/verify_password"
            android:background="@drawable/textinputborder"
            android:hint="@string/verify_password_hint"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:password="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:id="@+id/create_account_log_in"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/cta_button"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/have_account"
            android:textColor="@android:color/white"
            android:id="@+id/bottom_text"
            android:layout_gravity="center_horizontal"
            android:padding="10dp" />
    </LinearLayout>
</LinearLayout>
