<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editor_password_website"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/editor_website_hint"
        android:inputType="textUri"
        android:singleLine="true"
        android:imeOptions="actionNext"
        style="@style/EditorTextStyle" />

    <EditText
        android:id="@+id/editor_password_username"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/editor_username_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        style="@style/EditorTextStyle" />

    <EditText
        android:id="@+id/editor_password_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/editor_password_hint"
        android:inputType="textVisiblePassword"
        android:singleLine="true"
        android:imeOptions="actionDone"
        style="@style/EditorTextStyle" />

</LinearLayout>