<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical"
    android:background="#555555">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="10dp"
        android:textSize="48dp"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/editText"
        android:background="@drawable/textinputborder"
        android:hint="@string/username_hint"
        android:singleLine="true"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/editText2"
        android:background="@drawable/textinputborder"
        android:hint="@string/password_hint"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:password="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#0042ff"
        android:textColor="#ffffff" />


</LinearLayout>
