<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_gravity="right"
    android:id="@+id/detail_fragment_scrollview"
    android:background="@color/fragment_group_info_background"
    android:padding="0.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="24.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@id/title_container"
                android:background="@drawable/state_selector_background"
                android:padding="5.0dip"
                android:focusable="true"
                android:nextFocusLeft="@+id/doc_icon"
                android:nextFocusRight="@+id/detail_fragment_close_button"
                android:nextFocusUp="@id/detail_fragment_close_button"
                android:nextFocusDown="@+id/pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!--<ToggleButton
                    android:layout_gravity="left|center"
                    android:id="@+id/star_cb"
                    android:background="@drawable/ic_star_detail_fragment_selectable"
                    android:nextFocusLeft="@id/star_cb"
                    android:nextFocusRight="@id/title_container"
                    android:nextFocusUp="@id/detail_fragment_close_button"
                    android:nextFocusDown="@id/thumbnail"
                    android:layout_width="36.0dip"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:contentDescription="@string/doclist_star_cb_content_description" />-->

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/doc_icon"
                    android:layout_width="@dimen/fragment_group_info_doc_icon_width"
                    android:layout_height="@dimen/fragment_group_info_doc_icon_height"
                    android:layout_marginRight="7.0dip" />

                <TextView
                    android:textSize="14.0sp"
                    android:textColor="@color/fragment_group_info_primary_text"
                    android:layout_gravity="center"
                    android:id="@id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--<view
                android:layout_gravity="center"
                android:id="@+id/thumbnail"
                android:focusable="true"
                android:nextFocusLeft="@id/thumbnail"
                android:nextFocusRight="@id/detail_fragment_close_button"
                android:nextFocusUp="@id/title_container"
                android:nextFocusDown="@+id/pin_checkbox"
                android:layout_width="@dimen/detail_fragment_thumbnail_width"
                android:layout_height="@dimen/detail_fragment_thumbnail_height"
                android:layout_marginBottom="15.0dip"
                class="com.google.android.apps.docs.view.ThumbnailView" />-->

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/pin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/offline_title"
                    android:text="@string/fragment_group_info_offline_title"
                    style="@style/FragmentGroupInfoSharingItemText.Indent.SectionTitle" />

                <View
                    android:layout_marginTop="10.0dip"
                    style="@style/FragmentGroupInfoSharingItemSeparator.Thick" />

                <include layout="@layout/fragment_group_info_pin_button" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/share_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sharing_title"
                    android:text="@string/fragment_group_info_sharing_title"
                    style="@style/FragmentGroupInfoSharingItemText.Indent.SectionTitle" />

                <View
                    android:layout_marginTop="10.0dip"
                    style="@style/FragmentGroupInfoSharingItemSeparator.Thick" />

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/share_list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="14.0sp"
                    android:textColor="@color/fragment_group_info_primary_text"
                    android:layout_gravity="center"
                    android:id="@+id/share_list_warning"
                    android:padding="10.0dip"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:layout_gravity="center"
                    android:id="@+id/share_list_progress_bar"
                    android:layout_width="50.0dip"
                    android:layout_height="50.0dip"
                    android:indeterminate="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/general_info_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/general_info_title"
                    android:text="@string/fragment_group_info_general_info_title"
                    style="@style/FragmentGroupInfoSharingItemText.Indent.SectionTitle" />

                <View
                    android:layout_marginTop="10.0dip"
                    style="@style/FragmentGroupInfoSharingItemSeparator.Thick" />

                <TextView
                    android:id="@+id/last_modified"
                    android:text="@string/fragment_group_info_general_info_modified"
                    style="@style/FragmentGroupInfoSharingItemText.Indent" />

                <TextView
                    android:id="@+id/last_modified_by_me"
                    android:text="@string/fragment_group_info_general_info_modified_by_me"
                    style="@style/FragmentGroupInfoSharingItemText.Indent" />

                <TextView
                    android:id="@+id/last_opened_by_me"
                    android:text="@string/fragment_group_info_general_info_opened_by_me"
                    style="@style/FragmentGroupInfoSharingItemText.Indent" />
            </LinearLayout>

            <TextView
                android:gravity="center"
                android:id="@+id/trashed_item_description"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_group_info_item_in_trash" />
        </LinearLayout>

        <ImageView
            android:layout_gravity="top|right|center"
            android:id="@+id/detail_fragment_close_button"
            android:background="@drawable/state_selector_background"
            android:paddingTop="29.0dip"
            android:paddingRight="24.0dip"
            android:focusable="true"
            android:nextFocusLeft="@id/pin"
            android:nextFocusRight="@id/detail_fragment_close_button"
            android:nextFocusUp="@id/detail_fragment_close_button"
            android:nextFocusDown="@id/title_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_close"
            android:contentDescription="@string/fragment_group_info_close_button_content_description" />
    </FrameLayout>
</ScrollView>