<?xml version="1.0" encoding="utf-8"?>
<io.adrenaline.secrets.views.PasswordSecretEntryRelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_entry_root"
    android:focusable="true"
    android:nextFocusLeft="@+id/group_title"
    android:nextFocusRight="@+id/show_detail_fragment_button"
    android:clickable="true"
    android:longClickable="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GroupListActivity">

    <View
        android:id="@+id/main_body"
        android:background="@drawable/list_state_selector_background"
        android:paddingLeft="0.0dip"
        android:paddingTop="0.0dip"
        android:paddingRight="0.0dip"
        android:paddingBottom="0.0dip"
        android:focusable="false"
        android:duplicateParentState="true"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/group_list_entry_height" />

    <ImageView
        android:gravity="center_vertical"
        android:id="@+id/group_icon"
        android:background="@drawable/doc_icon_state_selector_background"
        android:focusable="false"
        android:duplicateParentState="true"
        android:layout_width="@dimen/group_list_entry_height"
        android:layout_height="@dimen/group_list_entry_height"
        android:scaleType="center"
        android:layout_alignTop="@id/main_body"
        android:layout_alignBottom="@id/main_body"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/group_list_entry_height"
        android:layout_alignTop="@id/main_body"
        android:layout_alignRight="@id/main_body"
        android:layout_alignBottom="@id/main_body">

        <ImageButton
            android:id="@id/show_detail_fragment_button"
            android:background="@drawable/transparent_active_state_selector_background"
            android:focusable="true"
            android:nextFocusLeft="@id/group_entry_root"
            android:layout_width="@dimen/group_list_entry_height"
            android:layout_height="@dimen/group_list_entry_height"
            android:src="@drawable/ic_action_about"
            android:scaleType="center"
            android:lines="0"
            android:contentDescription="@string/fragment_group_info_content_description" />
    </LinearLayout>

    <TextView
        android:textSize="16.0sp"
        android:textColor="@color/list_entry_primary_text"
        android:ellipsize="middle"
        android:gravity="left"
        android:id="@id/group_title"
        android:paddingLeft="8.0dip"
        android:paddingTop="8.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:layout_toLeftOf="@id/buttons"
        android:layout_toRightOf="@id/group_icon"
        android:layout_alignTop="@id/main_body"
        android:fontFamily="sans-serif" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/buttons"
        android:layout_below="@id/group_title"
        android:layout_alignLeft="@id/group_title">

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/offline_icon"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:src="@drawable/ic_offline_small"
            android:scaleType="center"
            android:contentDescription="@string/pin_offline" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/shared_icon"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:src="@drawable/ic_shared_small"
            android:scaleType="center"
            android:contentDescription="@string/shared_status" />

        <TextView
            android:textSize="13.0sp"
            android:textColor="@color/list_entry_secondary_text"
            android:id="@+id/group_labels"
            android:paddingTop="1.0dip"
            android:paddingBottom="2.0dip"
            android:duplicateParentState="true"
            android:layout_width="0.0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_weight="1.0"
            android:fontFamily="sans-serif-light" />

        <TextView
            android:textSize="13.0sp"
            android:textColor="@color/list_entry_secondary_text"
            android:id="@+id/offline_status"
            android:paddingTop="1.0dip"
            android:paddingBottom="2.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:fontFamily="sans-serif-light"
            style="@style/SingleLine" />

        <!--<ProgressBar
            android:layout_gravity="center_vertical"
            android:id="@id/progress"
            android:paddingLeft="10.0dip"
            android:paddingRight="30.0dip"
            android:layout_width="0.0px"
            android:layout_height="10.0dip"
            android:layout_weight="1.0"
            style="@style/ProgressBar" />-->
    </LinearLayout>

</io.adrenaline.secrets.views.PasswordSecretEntryRelativeLayout>